# samp-dotnet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pawn.json
.github/workflows/: build.yml  codeql-analysis.yml  develop-rebase.yml
.samp/: runtimes.json
dotnet/Micky5991.Samp.Net/: Micky5991.Samp.Net.sln
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Core/: Micky5991.Samp.Net.Core.csproj  Program.cs  SampServer.cs  SampSynchronizationContext.cs
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Core/Definitions/: constants.a_samp.txt
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Core/Interop/: INativeTypeConverter.cs  Native.cs  NativeTypeConverter.cs
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Core/Native/: Native.cs  NativeTypeConverter.cs
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Core/NativeEvents/: INativeEvent.cs  NativeEvent.cs
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Core/Threading/: SampSynchronizationContext.cs
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Example/: Micky5991.Samp.Net.Example.csproj  NLog.config  Program.cs  gamemode.json
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Example/Properties/: launchSettings.json
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Framework/: Micky5991.Samp.Net.Framework.csproj
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Framework/Interfaces/: IGamemodeStarter.cs
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Generators/: BuilderTarget.cs  BuilderTargetCollection.cs  Micky5991.Samp.Net.Generators.csproj  SampNativeBuilder.cs  SampNativesGenerator.cs
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Generators.Test/: Micky5991.Samp.Net.Generators.Test.csproj  Program.cs  natives.a_http.idl
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Generators.Test/Definitions/: constants.a_objects.txt  constants.a_vehicles.txt
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Generators/Contracts/: IElementBuildStrategy.cs
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Generators/Data/: IdlAttribute.cs  IdlCallback.cs  IdlNamespace.cs  IdlNamespaceElement.cs
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Generators/Extensions/: IdlAttributeExtension.cs  StringExtensions.cs
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.Generators/Strategies/: NamespaceBuildStrategy.cs
dotnet/Micky5991.Samp.Net/Micky5991.Samp.Net.NLogTarget/: Micky5991.Samp.Net.NLogTarget.csproj  SampLogTarget.cs
include/samp-dotnet/: NativeArgument.h  callback_argument.h  clr_manager.h  event_invoke_result.h  event_manager.h  samp-dotnet.h
include/sampgdk/: sampgdk.h
samp/: .gitignore  pawn.json
samp/src/: main.pwn
server/: pawn.json
src/: CMakeLists.txt
src/dotnet/: .editorconfig  Micky5991.Samp.Net.sln  Micky5991.Samp.Net.sln.DotSettings
src/dotnet/Micky5991.Samp.Net.Commands/: CommandConstants.cs  CommandExecutionStatus.cs  CommandExtension.cs  CommandExtensionBuilder.cs  CommandExtensionLifecycle.cs  CommandExtensionOptions.cs  CommandExtensionStarter.cs  Micky5991.Samp.Net.Commands.csproj  Micky5991.Samp.Net.Commands.ruleset
src/dotnet/Micky5991.Samp.Net.Commands.Tests/: CommandAttributeFixture.cs  CommandExtensionBuilderFixture.cs  CommandFactoryFixture.cs  CommandFixture.cs  CommandServiceFixture.cs  HandlercommandFixture.cs  Micky5991.Samp.Net.Commands.Tests.csproj  ParameterDefinitionFixture.cs  TestCommand.cs
src/dotnet/Micky5991.Samp.Net.Commands.Tests/Fakes/: FakeCommandExtensionStarter.cs  FakeCommandFactory.cs  FakeCommandListener.cs  FakeCommandService.cs  TestProfile.cs
src/dotnet/Micky5991.Samp.Net.Commands/Attributes/: CommandAliasAttribute.cs  CommandAttribute.cs
src/dotnet/Micky5991.Samp.Net.Commands/Elements/: Command.cs  HandlerCommand.cs  ParameterDefinition.cs
src/dotnet/Micky5991.Samp.Net.Commands/Events/: CommandExecutedEvent.cs  UnknownCommandEvent.cs
src/dotnet/Micky5991.Samp.Net.Commands/Exceptions/: CommandArgumentMapException.cs  DuplicateCommandException.cs
src/dotnet/Micky5991.Samp.Net.Commands/Extensions/: CommandExtensionExtension.cs  ResolutionContextExtension.cs
src/dotnet/Micky5991.Samp.Net.Commands/Interfaces/: ICommand.cs  ICommandFactory.cs  ICommandHandler.cs  ICommandListener.cs  ICommandService.cs
src/dotnet/Micky5991.Samp.Net.Commands/Mapping/: SampCommandMappingProfile.cs
src/dotnet/Micky5991.Samp.Net.Commands/Services/: CommandExtensionStarter.cs  CommandFactory.cs  CommandService.cs
src/dotnet/Micky5991.Samp.Net.Core/: Micky5991.Samp.Net.Core.csproj
src/dotnet/Micky5991.Samp.Net.Core/Definitions/: constants.a_players.txt
src/dotnet/Micky5991.Samp.Net.Core/Exceptions/: InvalidThreadException.cs
src/dotnet/Micky5991.Samp.Net.Core/Interop/: Native.cs  SampLoggerHandler.cs
src/dotnet/Micky5991.Samp.Net.Core/NativeEvents/: CancellableNativeEvent.cs
src/dotnet/Micky5991.Samp.Net.Core/Threading/: SampSynchronizationContext.cs  SampThreadEnforcer.cs
src/dotnet/Micky5991.Samp.Net.Example/: ChatListener.cs  ExamplePlayerListener.cs  ExampleServerBuilder.cs  ExampleStarter.cs  Micky5991.Samp.Net.Example.csproj  NLog.config  Program.cs  Startup.cs
src/dotnet/Micky5991.Samp.Net.Example/Commands/: TestCommand.cs  (+1 more)
src/dotnet/Micky5991.Samp.Net.Framework/: DialogConstants.cs  FrameworkDelegates.cs  Micky5991.Samp.Net.Framework.csproj  Micky5991.Samp.Net.Framework.ruleset  SampClaimTypes.cs
src/dotnet/Micky5991.Samp.Net.Generators/: BuilderTarget.cs  BuilderTargetCollection.cs  Micky5991.Samp.Net.Generators.csproj  SampNativeBuilder.cs  SampNativesGenerator.cs
src/dotnet/Micky5991.Samp.Net.Generators.Test/: Micky5991.Samp.Net.Generators.Test.csproj  Program.cs
src/dotnet/Micky5991.Samp.Net.NLogTarget/: Micky5991.Samp.Net.NLogTarget.csproj
src/dotnet/Micky5991.Samp.Net.SerilogSink/: Micky5991.Samp.Net.SerilogSink.csproj  SampNetSink.cs  SampSinkExtension.cs
src/mplaying/: CMakeLists.txt  mplaying.cpp
src/plugin/samp-dotnet/: CMakeLists.txt  plugin.cpp  samp-dotnet.cpp  samp-dotnet.def
src/plugin/samp-dotnet/managers/: clr_manager.cpp
src/samp-dotnet/: CMakeLists.txt  clr_manager.cpp  event_manager.cpp  plugin.cpp  samp-dotnet.cpp  samp-dotnet.def  sampgdk.c
(+286 files in other folders)
